tests/paczka1/fuzzy1/30006871.err
Error in line 1: D34s1gh7hfH A907 6,5
Error in line 2: Cq1 A907 74,4
Error in line 28: D34s1gh7hfH A418 69,1
Error in line 24: A188 A188 3,6
